# csc_484d

./: README.md
a1/: README.md
a1/puredata/: question-1.pd  question-2.pd
a1/rust/: Cargo.toml
a1/rust/assets/: example.ron  polyphony.ron
a1/rust/benches/: sin_compare.rs
a1/rust/examples/: bicycle_built_for_two.rs  bicycle_made_for_two.rs  simple.rs
a1/rust/src/: function_source.rs  lib.rs  main.rs  sin.rs  source.rs  wave.rs  wavetable.rs
a2/: Cargo.toml  README.md
a2/examples/: amp_phase_estimation.rs  arpeggiator.rs  complex_clock_plot.rs  complex_multiplication.rs  equal_temperament.rs  step_sequencer.rs  subtractive_synth.rs  test.rs
a2/src/: biquad.rs  complex.rs  envelope.rs  lib.rs  wavetable.rs
a2/src/bevy_midi/: output.rs
