[package]
name = "a2"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8.5"
rodio = { version = "0.16.0", features = ["wav"], default-features = false }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
criterion = "0.4.0"
plotters = "0.3.4"
rand_chacha = "0.3.1"
bevy = { version = "0.9.1", default-features = false, features = [
        # These are the default features:
        # (re-enable whichever you like)

        "bevy_asset",         # Assets management
        "bevy_scene",         # Scenes management
        "bevy_gilrs",         # Gamepad input support
        # "bevy_audio",         # Builtin audio
        "bevy_winit",         # Window management
        # "animation",          # Animation support
        "x11",                # Linux: Support X11 windowing system
        # "filesystem_watcher", # Asset hot-reloading
        "render",             # Graphics Rendering

        ## "render" actually just includes:
        ## (feel free to use just a subset of these, instead of "render")
        "bevy_render",        # Rendering framework core
        "bevy_core_pipeline", # Common rendering abstractions
        "bevy_sprite",        # 2D (sprites) rendering
        # "bevy_pbr",           # 3D (physically-based) rendering
        "bevy_gltf",          # GLTF 3D assets format support
        "bevy_text",          # Text/font rendering
        "bevy_ui",            # UI toolkit

        # File formats:
        "png",
        "hdr",
        "vorbis",
    ]}
midir = { version = "0.9.1", features = ["winrt"] }
bevy_egui = "0.19.0"
crossbeam-channel = "0.5.6"
