[package]
name = "a1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8.5"
rodio = { version = "0.16.0", features = ["wav"], default-features = false }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
criterion = "0.4.0"

[[bench]]
name = "sin_compare"
harness = false
